...
    <string name="reports">Reports</string>
    <string name="parrot_says_version">Parrot Says App v2.0</string>
    <string name="team_project">Team Project in Alphabetic Order</string>
    <string name="server_configuration">Server Configuration:</string>
    <string name="save">Save</string>
    <string name="if_you_see_something_say_something">If You See Something, Say Something:</string>
    <string name="submit">Submit</string>
    <string name="take_a_picture">Take a Picture</string>
    <string name="todo">TODO</string>
    <string-array name="teamMembers">
        <item>Andrea de La Isla</item>
        <item>Eduardo Santana</item>
        <item>Julio Vinicius A. de Carvalho</item>
        <item>Kelvin Trinh</item>
...
